Cambio en blogspot.html

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Tìtulo de mi primer post</title>
+        <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
         <h1>El titulo de mi primer poss</h1>
