Commit al master del blogpost en su version mas reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,17 @@
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
-        <h1>El titulo de mi primer poss</h1>
-        <p>Este es el parrafo de mi primer post</p>
+        <div id="container">
+            <div id="post">
+                <h1>Títula atractivo e 
+                    interesante de mi post
+                </h1>
+                <p>
+                    Este es el parrafo de inicio donde
+                    vamos a explicar cosas interesante
+                    y cheveres para todo nuestro público.
+                </p>
+            </div>
+        </div>
     </body>
 </html>
