Estructura inicial de la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+                Aquí va la cabecera
+            </div>
             <div id="post">
                 <h1>Títula atractivo e 
                     interesante de mi post
