--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,10 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Aquí va la cabecera
+                MiSuperBlog
+                <span id="tagline">
+                    Tu blog de confianza
+                </span>
             </div>
             <div id="post">
                 <h1>Títula atractivo e 
