--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,14 @@
                     vamos a explicar cosas interesante
                     y cheveres para todo nuestro público.
                 </p>
+                <p>
+                    Los blogs son la mejor forma de 
+                    compartir información, llegar a 
+                    muchas personas y dar a conocer 
+                    tu trabajo. También es una muy 
+                    buena forma de presentar un 
+                    portafolio de proyectos.
+                </p>
             </div>
         </div>
     </body>
