Agregue suscripcion, cambie la cabecera maestra y puse todo azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
             <div id="cabecera">
                 MiSuperBlog
                 <span id="tagline">
-                    Tu blog de confianza
+                    Tu blog maestro
                 </span>
             </div>
             <div id="post">
@@ -28,6 +28,7 @@
                     buena forma de presentar un 
                     portafolio de proyectos.
                 </p>
+                <P>Suscribete y dale like</P>
             </div>
         </div>
     </body>
