Una versión del hyperblog

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Tìtulo de mi primer post</title>
+        <title>Tìtulo de mi primer post 2.0</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
